--- a/springcloud-provider-config/application.yml
+++ b/springcloud-provider-config/application.yml
@@ -1,5 +1,3 @@
-server:
-  port: 8100
 spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
@@ -12,7 +10,9 @@ spring:
       username: root
       password: booszy
   application:
-    name: springcloud-provider-config
+    name: springcloud-provider
+  profiles:
+    active: dev
 logging:
   level:
     root: info
