--- a/springcloud-provider-config/application-production.yml
+++ b/springcloud-provider-config/application-production.yml
@@ -20,3 +20,5 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
     com.yasaka.stock : debug
+server:
+  port: 8100
