修改配置文件

--- a/springcloud-provider-config/application-production.yml
+++ b/springcloud-provider-config/application-production.yml
@@ -12,7 +12,7 @@ spring:
   application:
     name: springcloud-provider
   profiles:
-    active: dev
+    active: production
 logging:
   level:
     root: info
