--- a/springcloud-provider-config/application-dev.yml
+++ b/springcloud-provider-config/application-dev.yml
@@ -6,7 +6,7 @@ spring:
       ddl-auto: update
   datasource:
     druid:
-      url: jdbc:mysql://localhost:3306/spcloud
+      url: jdbc:mysql://172.17.0.1:3306/spcloud
       username: root
       password: booszy
   application:
