--- a/springcloud-provider-config/application-dev.yml
+++ b/springcloud-provider-config/application-dev.yml
@@ -7,7 +7,8 @@ spring:
   datasource:
     druid:
     #   url: jdbc:mysql://192.168.0.245:3306/spcloud
-      url: jdbc:mysql://172.17.0.1:3306/spcloud
+    #   url: jdbc:mysql://172.17.0.1:3306/spcloud
+      url: jdbc:mysql://localhost:3306/spcloud
       username: root
       password: booszy
   application:
