--- a/springcloud-zuul/application-dev.yml
+++ b/springcloud-zuul/application-dev.yml
@@ -7,3 +7,4 @@ zuul:
   routes:
     springcloud-consumer-config: /consumer/**
     springcloud-provider-config: /provider/**
+    sensitiveHeaders:
