--- a/springcloud-provider-config/application-dev.yml
+++ b/springcloud-provider-config/application-dev.yml
@@ -10,7 +10,7 @@ spring:
       ddl-auto: update
   datasource:
     druid:
-      url: jdbc:mysql://localhost:3306/spcloud
+      url: jdbc:mysql://13.58.87.174:3306/spcloud
       username: root
       password: booszy
   application:
