--- a/springcloud-provider-config/application-dev.yml
+++ b/springcloud-provider-config/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   redis:
     host: 172.17.0.1
-    password: 123456
+    #assword: 123456
     port: 6379
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
