--- a/springcloud-consumer-config/application-dev.yml
+++ b/springcloud-consumer-config/application-dev.yml
@@ -2,6 +2,6 @@ server:
   port: 8200
 spring:
   redis:
-    host: 127.0.0.1
-    password: 123456
+    host: 172.17.0.1
+    #password: 123456
     port: 6379
