--- a/springcloud-zuul/application-dev.yml
+++ b/springcloud-zuul/application-dev.yml
@@ -2,8 +2,8 @@ server:
   port: 8400
 spring:
   redis:
-    host: 127.0.0.1
-    password: 123456
+    host: 172.17.0.1
+    # password: 123456
     port: 6379
   profiles:
     active: dev
