--- a/springcloud-consumer-config/application-test.yml
+++ b/springcloud-consumer-config/application-test.yml
@@ -1,1 +1,2 @@
-hystrix.command.default.execution.timeout.enabled: false
+# hystrix.command.default.execution.timeout.enabled: false
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 80000
