--- a/springcloud-zuul/application-test.yml
+++ b/springcloud-zuul/application-test.yml
@@ -30,3 +30,6 @@ zuul:
 #     - authRoles: test
 #       securityCollections:
 #          - patterns:  /provider/user/list
+
+# hystrix.command.default.execution.timeout.enabled: false
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 80000
