--- a/springcloud-consumer-feign/application-csdn.yml
+++ b/springcloud-consumer-feign/application-csdn.yml
@@ -6,6 +6,9 @@ logging:
 feign:
   hystrix:
     enabled: true
+ribbon:
+  ReadTimeout:  30000
+  ConnectTimeout:  15000
 hystrix:
   command:
     default:
