--- a/springcloud-provider-config/application-csdn.yml
+++ b/springcloud-provider-config/application-csdn.yml
@@ -13,7 +13,7 @@ spring:
      # url: jdbc:mysql://13.58.87.174:3306/spcloud
       url: jdbc:mysql://127.0.0.1:3306/spcloud
       username: root
-      password: booszy
+      password: root
   application:
     name: springcloud-provider-config
   profiles:
