--- a/springcloud-provider-config/application-dev.yml
+++ b/springcloud-provider-config/application-dev.yml
@@ -12,7 +12,7 @@ spring:
     druid:
       url: jdbc:mysql://127.0.0.1:3306/spcloud
       username: root
-      password: booszy
+      password: root
   application:
     name: springcloud-provider-config
   profiles:
