--- a/springcloud-provider-config/application-production.yml
+++ b/springcloud-provider-config/application-production.yml
@@ -8,7 +8,7 @@ spring:
     druid:
       url: jdbc:mysql://localhost:3306/spcloud
       username: root
-      password: booszy
+      password: root
   application:
     name: springcloud-provider-config
   profiles:
